email cropping fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -931,9 +931,7 @@ img {
 .form__wrapper {
   max-width: 650px;
   width: 100%;
-  height: 50px;
-  border-radius: 60px;
-  overflow: hidden;
+  height: 110px;
   margin: 0 auto;
   transform: scale(0.85);
 }
